testsuite/tests/parser/should_fail/T19504.stderr

T19504.hs:3:23: error: [GHC-09646] Tuple section in pattern context
